# python-skeleton

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
script/: _common.sh  bootstrap  cibuild  console  format  lint  setup  test  test-watch  update
skeleton/: __init__.py  core.py
src/skeleton/: __init__.py  core.py
tests/: test_advanced.py  test_basic.py
